Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11158

Icons not shown in Administrative tools

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.2
    • Shell

    Description

      The icons for the items in the Administrative Tools folders are no longer show. It just shows a white square with the shortcut icon. It was one of the recent shell32 icon code commits. I have not quite pinned down the guilty revision. CC smiley

      Attachments

        Activity

          People

            Smiley Giannis Adamopoulos
            Pi_User5 Pi_User5
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: