[SHELL32] - Fix loading shortcut icons. The previous code passed a full pidl to GetUIObjectOf which is really wrong. CORE-11158

svn path=/trunk/; revision=71233